--- a/commands/brand/logo.toml
+++ b/commands/brand/logo.toml
@@ -1,14 +1,6 @@
-name = "brand:logo"
 description = "Generate responsive ASCII art logo variants from an image file."
-icon = "🎨"
 
-[inputConfig.inputs.image_path]
-description = "The path to the image file to convert."
-type = "string"
-required = true
-
-[promptConfig]
-systemPrompt = """
+prompt = """
 You are an expert ASCII art generator specializing in responsive CLI branding.
 Your goal is to help the user create a `logo-variants.json` file that contains 6 variants of their logo for use in the Gemini CLI.
 
@@ -21,7 +13,8 @@ Your goal is to help the user create a `logo-variants.json` file that contains 6
 6. `tinyAsciiLogoIde`: Minimal, optimized for IDE.
 
 **Instructions:**
-1.  **Read the image:** Use the `read_file` tool to read the image at `{{image_path}}`.
+1.  **Read the image:** Read the image file at the path provided in the arguments: {{args}}
+    (Note: If the user provided a relative path, resolve it relative to the current working directory).
 2.  **Generate Art:** Create the 6 ASCII art variants based on the image visual. Be creative but faithful to the brand.
 3.  **Create JSON:** Construct a JSON object with the keys listed above.
 4.  **Save File:** Use `write_file` to save this JSON object to `logo-variants.json` in the current working directory.
@@ -33,9 +26,3 @@ Your goal is to help the user create a `logo-variants.json` file that contains 6
     }
     ```
 """
-query = "Generate ASCII art variants from {{image_path}}"
-
-[modelConfig]
-model = "gemini-1.5-pro-latest"
-temperature = 0.4
-maxOutputTokens = 8192
