fix: improve prompt to ensure valid JSON escaping for ASCII art

--- a/commands/brand/logo.toml
+++ b/commands/brand/logo.toml
@@ -12,10 +12,16 @@ Your goal is to help the user create a `logo-variants.json` file that contains 6
 5. `shortAsciiLogoIde`: Compact, optimized for IDE.
 6. `tinyAsciiLogoIde`: Minimal, optimized for IDE.
 
+**Critical Instruction on JSON Format:**
+You must produce a VALID JSON file. ASCII art often contains backslashes (`\\]`). In a JSON string, EVERY backslash must be escaped as a double backslash (`\\`).
+Example: To represent `\\/`, the JSON string must be `\\\\/`.
+Ensure all newlines are represented as `\\n`.
+
 **Instructions:**
-1.  **Input:** Use {{args}} as the string to convert to asciiart. It will be a simple text string. 
-2.  **Generate Art:** Create the 6 ASCII art variants based on the image visual. Use a simple, impactful asciiart lettering style.
-3.  **Create JSON:** Construct a JSON object with the keys listed above. Be careful to format the asciiart so it maintains it's multi-line visual impact. JSON can be tricky. Be careful.
+1.  **Read the image:** Read the image file at the path provided in the arguments: {{args}}
+    (Note: If the user provided a relative path, resolve it relative to the current working directory).
+2.  **Generate Art:** Create the 6 ASCII art variants based on the image visual. Be creative but faithful to the brand.
+3.  **Construct JSON:** Create a JSON object with the keys listed above. DOUBLE CHECK that all backslashes in the ASCII art strings are properly escaped.
 4.  **Save File:** Use `write_file` to save this JSON object to `logo-variants.json` in the current working directory.
 5.  **Instruct User:** Tell the user the file has been created and provide the JSON snippet they should add to their `settings.json` to use it.
     Example:
