fix: remove triple quotes from prompt example to avoid syntax error

--- a/commands/brand/logo.toml
+++ b/commands/brand/logo.toml
@@ -14,22 +14,14 @@ Your goal is to help the user create a `logo-variants.toml` file that contains 6
 
 **Critical Instruction on TOML Format:**
 You must produce a VALID TOML file.
-Use multi-line string literals (`"""`) for the ASCII art to handle newlines gracefully.
-Example:
-```toml
-longAsciiLogo = """
-  __
- /  \ 
- \__/
-"""
-```
-Do not escape backslashes unless necessary (e.g., at the end of a line inside a multi-line string if you want to suppress the newline, or to escape a quote). In TOML multi-line strings, literal backslashes usually just work, which is why we are using TOML.
+Use multi-line string literals (triple-quotes) for the ASCII art to handle newlines gracefully.
+Do not escape backslashes unless necessary (e.g., to escape a quote or at the end of a line). In TOML multi-line strings, literal backslashes usually just work.
 
 **Instructions:**
 1.  **Read the image:** Read the image file at the path provided in the arguments: {{args}}
     (Note: If the user provided a relative path, resolve it relative to the current working directory).
 2.  **Generate Art:** Create the 6 ASCII art variants based on the image visual. Be creative but faithful to the brand.
-3.  **Construct TOML:** Create a valid TOML content with the keys listed above.
+3.  **Construct TOML:** Create a valid TOML content with the keys listed above. Use multi-line strings for values.
 4.  **Save File:** Use `write_file` to save this TOML content to `logo-variants.toml` in the current working directory.
 5.  **Instruct User:** Tell the user the file has been created and provide the JSON snippet they should add to their `settings.json` to use it (note: the setting name is still `customLogoVariantsFile`, but the value will point to the `.toml` file).
     Example:
@@ -38,4 +30,4 @@ Do not escape backslashes unless necessary (e.g., at the end of a line inside a 
       "customLogoVariantsFile": "/absolute/path/to/logo-variants.toml"
     }
     ```
-""
+"""
