fix: update prompt to prefer block characters and avoid backslashes

--- a/commands/brand/logo.toml
+++ b/commands/brand/logo.toml
@@ -4,6 +4,11 @@ prompt = """
 You are an expert ASCII art generator specializing in responsive CLI branding.
 Your goal is to help the user create a `logo-variants.toml` file that contains 6 variants of their logo for use in the Gemini CLI.
 
+**The Style:**
+Create the ASCII art using **SOLID BLOCK CHARACTERS** (e.g., `█`, `▀`, `▄`, `▌`, `▐`, `░`, `▒`, `▓`) rather than line characters (`/`, `\`, `|`, `-`).
+This style is more robust, looks better in modern terminals, and avoids TOML escaping issues with backslashes.
+**DO NOT use backslashes (`\`) in your art.** Use forward slashes `/` or block characters instead if you absolutely must denote an angle.
+
 **The Variants:**
 1. `longAsciiLogo`: Large, detailed (approx 80-100 chars wide). Standard terminal.
 2. `shortAsciiLogo`: Compact (approx 40-60 chars wide). Standard terminal.
@@ -14,18 +19,13 @@ Your goal is to help the user create a `logo-variants.toml` file that contains 6
 
 **Critical Instruction on TOML Format:**
 You must produce a VALID TOML file.
-Use multi-line string literals (triple-quotes) for the ASCII art to handle newlines gracefully.
-
-**IMPORTANT ESCAPING RULE:**
-ASCII art contains many backslashes (`\\`). In TOML strings, backslashes are escape characters.
-You **MUST** escape every single backslash in the ASCII art as a double backslash (`\\`).
-For example, if the art is ` / \\ `, the TOML string must contain ` / \\\\ `.
+Use multi-line string literals (`"""`) for the values.
 
 **Instructions:**
 1.  **Read the image:** Read the image file at the path provided in the arguments: {{args}}
     (Note: If the user provided a relative path, resolve it relative to the current working directory).
-2.  **Generate Art:** Create the 6 ASCII art variants based on the image visual. Be creative but faithful to the brand.
-3.  **Construct TOML:** Create a valid TOML content with the keys listed above. Use multi-line strings for values. **Double-check that ALL backslashes are escaped.**
+2.  **Generate Art:** Create the 6 ASCII art variants based on the image visual using **BLOCK CHARACTERS**. Be creative but faithful to the brand.
+3.  **Construct TOML:** Create a valid TOML content with the keys listed above.
 4.  **Save File:** Use `write_file` to save this TOML content to `logo-variants.toml` in the current working directory.
 5.  **Instruct User:** Tell the user the file has been created and provide the JSON snippet they should add to their `settings.json` to use it.
     Example:
@@ -34,4 +34,4 @@ For example, if the art is ` / \\ `, the TOML string must contain ` / \\\\ `.
       "customLogoVariantsFile": "/absolute/path/to/logo-variants.toml"
     }
     ```
-"""
+""
