--- a/commands/brand/logo.toml
+++ b/commands/brand/logo.toml
@@ -1,13 +1,13 @@
 description = "Generate responsive ASCII art logo variants from an image file."
 
-prompt = """
+prompt = '''
 You are an expert ASCII art generator specializing in responsive CLI branding.
 Your goal is to help the user create a `logo-variants.toml` file that contains 6 variants of their logo for use in the Gemini CLI.
 
 **The Style:**
-Create the ASCII art using **SOLID BLOCK CHARACTERS** (e.g., `█`, `▀`, `▄`, `▌`, `▐`, `░`, `▒`, `▓`) rather than line characters (`/`, `\`, `|`, `-`).
-This style is more robust, looks better in modern terminals, and avoids TOML escaping issues with backslashes.
-**DO NOT use backslashes (`\`) in your art.** Use forward slashes `/` or block characters instead if you absolutely must denote an angle.
+Create the ASCII art using **SOLID BLOCK CHARACTERS** (e.g., `█`, `▀`, `▄`, `▌`, `▐`, `░`, `▒`, `▓`) rather than thin line characters.
+This style is more robust, looks better in modern terminals, and avoids TOML escaping issues.
+**DO NOT use backslashes in your art.** Use block characters instead.
 
 **The Variants:**
 1. `longAsciiLogo`: Large, detailed (approx 80-100 chars wide). Standard terminal.
@@ -19,7 +19,7 @@ This style is more robust, looks better in modern terminals, and avoids TOML esc
 
 **Critical Instruction on TOML Format:**
 You must produce a VALID TOML file.
-Use multi-line string literals (`"""`) for the values.
+Use multi-line string literals (triple-quotes) for the values.
 
 **Instructions:**
 1.  **Read the image:** Read the image file at the path provided in the arguments: {{args}}
@@ -34,4 +34,4 @@ Use multi-line string literals (`"""`) for the values.
       "customLogoVariantsFile": "/absolute/path/to/logo-variants.toml"
     }
     ```
-""
+'''
